# bpffilter

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-vm.sh  cloud-config.yaml  docker-compose.yml  format-code.sh  notes.md
src/: bpf_program.cpp  bpf_program.hxx  cmdline.cpp  cmdline.hxx  common.h  main.bpf.c  main.cpp  sampler.hxx  screen.cpp  screen.hxx  utils.cpp  utils.hxx  xdp_program.cpp  xdp_program.hxx
src/kernel/: common.h  main.bpf.c  utils.bpf.h
src/kernel/tests/: collect_addresses.cpp  collect_ports.cpp  collect_proto.cpp  remove_bits.cpp
